REFACTOR : 결제서비스 재오픈